--- a/Pages/Vacancies.html
+++ b/Pages/Vacancies.html
@@ -69,7 +69,7 @@
                     </svg>
                     <p>Избранное</p>
                 </div>
-                <a href="./category.html" class="flex cursor-pointer items-center flex-col gap-[7px]">
+                <a href="./products.html" class="flex cursor-pointer items-center flex-col gap-[7px]">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M11.3325 1.89776C11.3324 1.89785 11.3327 1.89767 11.3325 1.89776L3.33366 5.89721L3.33255 5.89776C2.82288 6.15102 2.50045 6.67089 2.50005 7.24V16.7635C2.49608 17.3334 2.81541 17.8563 3.32416 18.113C3.32387 18.1129 3.32445 18.1132 3.32416 18.113L11.3237 22.1128C11.7462 22.3242 12.2438 22.3243 12.6663 22.1129L20.6664 18.1128L20.6675 18.1122C21.1773 17.8589 21.4997 17.3389 21.5 16.7697V7.24026C21.4997 6.67105 21.1773 6.15106 20.6675 5.89776L20.6664 5.89721L12.6675 1.89776C12.6674 1.89767 12.6677 1.89786 12.6675 1.89776C12.2474 1.6892 11.7527 1.68919 11.3325 1.89776ZM10.8875 1.00223C11.5883 0.654 12.4118 0.654 13.1125 1.00223L13.1137 1.00278L21.1125 5.00223C21.1124 5.00215 21.1127 5.00231 21.1125 5.00223C21.9618 5.42448 22.4995 6.29123 22.5 7.23973V16.77C22.4995 17.7184 21.9624 18.5852 21.1132 19.0074C21.113 19.0075 21.1134 19.0073 21.1132 19.0074L13.1138 23.0071C13.1138 23.0072 13.1138 23.0071 13.1138 23.0071C12.4097 23.3594 11.5806 23.3595 10.8764 23.0072C10.8764 23.0072 10.8765 23.0072 10.8764 23.0072L2.87644 19.0072L2.87506 19.0065C2.02685 18.5791 1.49413 17.708 1.50005 16.7584V7.24C1.50055 6.29154 2.03772 5.4248 2.88695 5.00253C2.88675 5.00263 2.88715 5.00243 2.88695 5.00253L10.8864 1.00278L10.8875 1.00223Z"
@@ -85,6 +85,18 @@
                             fill="#414141" />
                     </svg>
                     <p>продукты</p>
+                </a>
+                <a href="./category.html" class="flex cursor-pointer items-center flex-col gap-[7px]">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#55556D">
+                        <path
+                            d="M360-240h440v-107H360v107ZM160-613h120v-107H160v107Zm0 187h120v-107H160v107Zm0 186h120v-107H160v107Zm200-186h440v-107H360v107Zm0-187h440v-107H360v107ZM160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Z" />
+                    </svg>
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M6.5529 3.27638C6.67639 3.02939 6.97673 2.92928 7.22372 3.05277L17.2237 8.05277C17.4707 8.17627 17.5708 8.4766 17.4473 8.72359C17.3238 8.97058 17.0235 9.0707 16.7765 8.9472L6.7765 3.9472C6.52951 3.82371 6.4294 3.52337 6.5529 3.27638Z"
+                        fill="#55556D" />
+                    </svg>
+                    <p>Category</p>
                 </a>
                 <a href="./cart.html">
                     <div class="flex cursor-pointer items-center flex-col gap-[7px]">
@@ -189,11 +201,11 @@
         </ul>
     </div>
 
-    <!-- <div id="register" class="register bg-[#FCD5BACC]/80 h-full w-full z-[10] fixed flex items-center justify-center">
+    <div id="register" class="register bg-[#FCD5BACC]/80 h-full w-full z-[0] fixed flex items-center justify-center">
         <div
             class="max-w-[420px] rounded-[5px] h-auto w-full pb-[40px] bg-[white] relative flex items-center justify-center flex-col pt-[72px]">
-            <svg id="register-close" class="cursor-pointer bsolute right- top-0 bg-[#F3F2F1] rounded-[4px] " width="24"
-                height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg id="register-close" class="cursor-pointer absolute right-0 top-0 bg-[#F3F2F1] rounded-[4px] "
+                width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                     d="M18.3536 5.64645C18.5488 5.84171 18.5488 6.15829 18.3536 6.35355L6.35355 18.3536C6.15829 18.5488 5.84171 18.5488 5.64645 18.3536C5.45118 18.1583 5.45118 17.8417 5.64645 17.6464L17.6464 5.64645C17.8417 5.45118 18.1583 5.45118 18.3536 5.64645Z"
                     fill="#414141" />
@@ -207,16 +219,18 @@
                 <input class="border-[1px] border-[#70C05B] pl-[16px] py-[12px] rounded-[4px] text-[18px] outline-none"
                     type="tel" placeholder="+998" name="" id="">
             </div>
-            <div class="bg-[#FCD5BA] px-[83px] mt-[32px] rounded-[5px] py-[10px]">
+            <div class="bg-[#FCD5BA] cursor-pointer px-[83px] mt-[32px] rounded-[5px] py-[10px]">
                 <p class="text-[24px] text-[#FF6633]">Вход</p>
             </div>
             <div class="pt-[36px]">
                 <a href=""
-                    class="max-w-[121px] px-[8px] text-[12px] rounded-[4px] text-[#70C05B] py-[4px] w-full border-[1px]">Регистрация</a>
-                <a href="" class="max-w-[121px] px-[8px] text-[12px] rounded-[4px] py-[4px] w-full">Забыли пароль?</a>
+                    class="cursor-pointer max-w-[121px] px-[8px] text-[12px] rounded-[4px] text-[#70C05B] py-[4px] w-full border-[1px]">Регистрация</a>
+                <a href=""
+                    class="max-w-[121px] cursor-pointer px-[8px] text-[12px] rounded-[4px] py-[4px] w-full">Забыли
+                    пароль?</a>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <main>
         <section class="pt-[70px] sm:pt-[110px] pb-[40px] sm:pb-[80px]">
@@ -453,23 +467,35 @@
     <div
         class="flex sm:hidden bg-[white] flex fixed h-[10vw] w-[100vw] bottom-[0px] justify-between items-center flex py-[30px] px-[15px] z-[900]">
         <a class="flex flex-col items-center" href="../index.html">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                     d="M9.5 20.5002V16.0002C9.5 14.6192 10.619 13.5002 12 13.5002V13.5002C13.381 13.5002 14.5 14.6192 14.5 16.0002V20.5002H20V11.9143C20 11.3843 19.789 10.8752 19.414 10.5002L12.707 3.79325C12.316 3.40225 11.683 3.40225 11.293 3.79325L4.586 10.5002C4.211 10.8752 4 11.3843 4 11.9143V20.5002H9.5Z"
                     stroke="#55556D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
-            <p class="text-[12px]">Главная</p>
+            <p class="text-[11px]">Главная</p>
         </a>
         <div class="flex flex-col items-center">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                     d="M12.7046 4.25632C13.8299 3.13054 15.3564 2.49805 16.9482 2.49805C18.5399 2.49805 20.0664 3.13051 21.1916 4.25624C22.3174 5.38152 22.95 6.90816 22.95 8.49987C22.95 10.0916 22.3175 11.6181 21.1917 12.7434C21.1917 12.7435 21.1917 12.7434 21.1917 12.7434L12.3517 21.5834C12.1565 21.7787 11.8399 21.7787 11.6446 21.5834L2.80461 12.7434C0.460963 10.3998 0.460963 6.59997 2.80461 4.25632C5.14826 1.91267 8.94807 1.91267 11.2917 4.25632L11.9982 4.96277L12.7046 4.25632C12.7046 4.25629 12.7046 4.25635 12.7046 4.25632ZM16.9482 3.49805C15.6217 3.49805 14.3496 4.02515 13.4118 4.96334L12.3517 6.02343C12.258 6.11719 12.1308 6.16987 11.9982 6.16987C11.8656 6.16987 11.7384 6.11719 11.6446 6.02343L10.5846 4.96343C8.63149 3.0103 5.46484 3.0103 3.51172 4.96343C1.55859 6.91655 1.55859 10.0832 3.51172 12.0363L11.9982 20.5228L20.4846 12.0363C21.4228 11.0986 21.95 9.82636 21.95 8.49987C21.95 7.17338 21.4229 5.90126 20.4847 4.96351C19.5469 4.02532 18.2747 3.49805 16.9482 3.49805Z"
                     fill="#414141" />
             </svg>
-            <p class="text-[12px]">Избранное</p>
+            <p class="text-[11px]">Избранное</p>
         </div>
-        <a href="./category.html" class="flex flex-col items-center">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <a class="flex flex-col items-center" href="./category.html"
+            class="flex cursor-pointer items-center flex-col gap-[7px]">
+            <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#55556D">
+                <path
+                    d="M360-240h440v-107H360v107ZM160-613h120v-107H160v107Zm0 187h120v-107H160v107Zm0 186h120v-107H160v107Zm200-186h440v-107H360v107Zm0-187h440v-107H360v107ZM160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Z" />
+            </svg>
+            <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M6.5529 3.27638C6.67639 3.02939 6.97673 2.92928 7.22372 3.05277L17.2237 8.05277C17.4707 8.17627 17.5708 8.4766 17.4473 8.72359C17.3238 8.97058 17.0235 9.0707 16.7765 8.9472L6.7765 3.9472C6.52951 3.82371 6.4294 3.52337 6.5529 3.27638Z"
+                fill="#55556D" />
+            </svg>
+            <p class="text-[11px]">Category</p>
+        </a>
+        <a href="./products.html" class="flex flex-col items-center">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                     d="M11.3325 1.89792C11.3324 1.89801 11.3327 1.89782 11.3325 1.89792L3.33366 5.89736L3.33255 5.89792C2.82288 6.15117 2.50045 6.67105 2.50005 7.24015V16.7636C2.49608 17.3335 2.81541 17.8564 3.32416 18.1132C3.32387 18.113 3.32445 18.1133 3.32416 18.1132L11.3237 22.1129C11.7462 22.3244 12.2438 22.3244 12.6663 22.113L20.6664 18.1129L20.6675 18.1124C21.1773 17.8591 21.4997 17.3391 21.5 16.7699V7.24042C21.4997 6.67121 21.1773 6.15121 20.6675 5.89792L20.6664 5.89736L12.6675 1.89792C12.6674 1.89782 12.6677 1.89801 12.6675 1.89792C12.2474 1.68935 11.7527 1.68934 11.3325 1.89792ZM10.8875 1.00238C11.5883 0.654153 12.4118 0.654153 13.1125 1.00238L13.1137 1.00293L21.1125 5.00238C21.1124 5.0023 21.1127 5.00247 21.1125 5.00238C21.9618 5.42464 22.4995 6.29138 22.5 7.23988V16.7701C22.4995 17.7186 21.9624 18.5853 21.1132 19.0076C21.113 19.0077 21.1134 19.0075 21.1132 19.0076L13.1138 23.0073C13.1138 23.0073 13.1138 23.0073 13.1138 23.0073C12.4097 23.3596 11.5806 23.3597 10.8764 23.0074C10.8764 23.0073 10.8765 23.0074 10.8764 23.0074L2.87644 19.0074L2.87506 19.0067C2.02685 18.5793 1.49413 17.7082 1.50005 16.7585V7.24015C1.50055 6.29169 2.03772 5.42496 2.88695 5.00268C2.88675 5.00278 2.88715 5.00258 2.88695 5.00268L10.8864 1.00294L10.8875 1.00238Z"
                     fill="#414141" />
@@ -484,11 +510,11 @@
                     fill="#414141" />
             </svg>
 
-            <p class="text-[12px]">Заказы</p>
+            <p class="text-[11px]">Заказы</p>
         </a>
         <a href="./cart.html" class="flex items-center flex-col">
 
-            <svg width="24" height="28" viewBox="0 0 24 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="20" height="24" viewBox="0 0 24 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                     d="M5.5 25C5.5 23.6193 6.61929 22.5 8 22.5C9.38071 22.5 10.5 23.6193 10.5 25C10.5 26.3807 9.38071 27.5 8 27.5C6.61929 27.5 5.5 26.3807 5.5 25ZM8 23.5C7.17157 23.5 6.5 24.1716 6.5 25C6.5 25.8284 7.17157 26.5 8 26.5C8.82843 26.5 9.5 25.8284 9.5 25C9.5 24.1716 8.82843 23.5 8 23.5Z"
                     fill="#414141" />
@@ -503,11 +529,11 @@
                     d="M18.3804 9C18.3137 9 18.257 8.98 18.2104 8.94C18.1704 8.89333 18.1504 8.83667 18.1504 8.77V3.17L16.4904 4.45C16.4437 4.49 16.3937 4.51 16.3404 4.51C16.2804 4.51 16.2237 4.47667 16.1704 4.41L15.9104 4.08C15.877 4.03333 15.8604 3.98667 15.8604 3.94C15.8604 3.86 15.8937 3.79667 15.9604 3.75L18.1404 2.07C18.2137 2.02333 18.3004 2 18.4004 2H18.9104C18.977 2 19.0304 2.02333 19.0704 2.07C19.117 2.11 19.1404 2.16333 19.1404 2.23V8.77C19.1404 8.83667 19.117 8.89333 19.0704 8.94C19.0304 8.98 18.977 9 18.9104 9H18.3804Z"
                     fill="white" />
             </svg>
-            <p class="text-[12px]">Корзина</p>
+            <p class="text-[11px]">Корзина</p>
         </a>
-        <div>
-            <img src="../assets/header/avatar (8).png" alt="avatar">
-        </div>
+        <a href="./register.html">
+            <img class="w-[28px] h-[28px]" src="../assets/header/avatar (8).png" alt="avatar">
+        </a>
     </div>
 
     <script src="../js/main_2.js"></script>
