--- a/Pages/all_products_discount.html
+++ b/Pages/all_products_discount.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
     <header class="py-[16px] bg-[white] fixed z-[100] w-full shadow-[0_4px_6px_-1px_rgba(0,0,0,0.1)]">
         <div class="container mx-auto px-[20px] gap-[40px] 2xl:px-[127px] flex items-center justify-between">
             <div>
@@ -68,7 +69,7 @@
                     </svg>
                     <p>Избранное</p>
                 </div>
-                <a href="./category.html" class="flex cursor-pointer items-center flex-col gap-[7px]">
+                <a href="./products.html" class="flex cursor-pointer items-center flex-col gap-[7px]">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M11.3325 1.89776C11.3324 1.89785 11.3327 1.89767 11.3325 1.89776L3.33366 5.89721L3.33255 5.89776C2.82288 6.15102 2.50045 6.67089 2.50005 7.24V16.7635C2.49608 17.3334 2.81541 17.8563 3.32416 18.113C3.32387 18.1129 3.32445 18.1132 3.32416 18.113L11.3237 22.1128C11.7462 22.3242 12.2438 22.3243 12.6663 22.1129L20.6664 18.1128L20.6675 18.1122C21.1773 17.8589 21.4997 17.3389 21.5 16.7697V7.24026C21.4997 6.67105 21.1773 6.15106 20.6675 5.89776L20.6664 5.89721L12.6675 1.89776C12.6674 1.89767 12.6677 1.89786 12.6675 1.89776C12.2474 1.6892 11.7527 1.68919 11.3325 1.89776ZM10.8875 1.00223C11.5883 0.654 12.4118 0.654 13.1125 1.00223L13.1137 1.00278L21.1125 5.00223C21.1124 5.00215 21.1127 5.00231 21.1125 5.00223C21.9618 5.42448 22.4995 6.29123 22.5 7.23973V16.77C22.4995 17.7184 21.9624 18.5852 21.1132 19.0074C21.113 19.0075 21.1134 19.0073 21.1132 19.0074L13.1138 23.0071C13.1138 23.0072 13.1138 23.0071 13.1138 23.0071C12.4097 23.3594 11.5806 23.3595 10.8764 23.0072C10.8764 23.0072 10.8765 23.0072 10.8764 23.0072L2.87644 19.0072L2.87506 19.0065C2.02685 18.5791 1.49413 17.708 1.50005 16.7584V7.24C1.50055 6.29154 2.03772 5.4248 2.88695 5.00253C2.88675 5.00263 2.88715 5.00243 2.88695 5.00253L10.8864 1.00278L10.8875 1.00223Z"
@@ -84,6 +85,18 @@
                             fill="#414141" />
                     </svg>
                     <p>продукты</p>
+                </a>
+                <a href="./category.html" class="flex cursor-pointer items-center flex-col gap-[7px]">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#55556D">
+                        <path
+                            d="M360-240h440v-107H360v107ZM160-613h120v-107H160v107Zm0 187h120v-107H160v107Zm0 186h120v-107H160v107Zm200-186h440v-107H360v107Zm0-187h440v-107H360v107ZM160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Z" />
+                    </svg>
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M6.5529 3.27638C6.67639 3.02939 6.97673 2.92928 7.22372 3.05277L17.2237 8.05277C17.4707 8.17627 17.5708 8.4766 17.4473 8.72359C17.3238 8.97058 17.0235 9.0707 16.7765 8.9472L6.7765 3.9472C6.52951 3.82371 6.4294 3.52337 6.5529 3.27638Z"
+                        fill="#55556D" />
+                    </svg>
+                    <p>Category</p>
                 </a>
                 <a href="./cart.html">
                     <div class="flex cursor-pointer items-center flex-col gap-[7px]">
@@ -188,6 +201,38 @@
         </ul>
     </div>
 
+
+    <div id="register" class="register bg-[#FCD5BACC]/80 h-full w-full z-[0] fixed flex items-center justify-center">
+        <div
+            class="max-w-[420px] rounded-[5px] h-auto w-full pb-[40px] bg-[white] relative flex items-center justify-center flex-col pt-[72px]">
+            <svg id="register-close" class="cursor-pointer absolute right-0 top-0 bg-[#F3F2F1] rounded-[4px] "
+                width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M18.3536 5.64645C18.5488 5.84171 18.5488 6.15829 18.3536 6.35355L6.35355 18.3536C6.15829 18.5488 5.84171 18.5488 5.64645 18.3536C5.45118 18.1583 5.45118 17.8417 5.64645 17.6464L17.6464 5.64645C17.8417 5.45118 18.1583 5.45118 18.3536 5.64645Z"
+                    fill="#414141" />
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M5.64645 5.64645C5.84171 5.45118 6.15829 5.45118 6.35355 5.64645L18.3536 17.6464C18.5488 17.8417 18.5488 18.1583 18.3536 18.3536C18.1583 18.5488 17.8417 18.5488 17.6464 18.3536L5.64645 6.35355C5.45118 6.15829 5.45118 5.84171 5.64645 5.64645Z"
+                    fill="#414141" />
+            </svg>
+            <h1 class="font-bold text-[24px]">Вход</h1>
+            <div class="pt-[32px]">
+                <label class="text-[#8F8F8F] text-[18px]">Телефон</label> <br>
+                <input class="border-[1px] border-[#70C05B] pl-[16px] py-[12px] rounded-[4px] text-[18px] outline-none"
+                    type="tel" placeholder="+998" name="" id="">
+            </div>
+            <div class="bg-[#FCD5BA] cursor-pointer px-[83px] mt-[32px] rounded-[5px] py-[10px]">
+                <p class="text-[24px] text-[#FF6633]">Вход</p>
+            </div>
+            <div class="pt-[36px]">
+                <a href=""
+                    class="cursor-pointer max-w-[121px] px-[8px] text-[12px] rounded-[4px] text-[#70C05B] py-[4px] w-full border-[1px]">Регистрация</a>
+                <a href=""
+                    class="max-w-[121px] cursor-pointer px-[8px] text-[12px] rounded-[4px] py-[4px] w-full">Забыли
+                    пароль?</a>
+            </div>
+        </div>
+    </div>
+
     <main>
         <section>
             <div class="container mx-auto px-[20px] pt-[94px] 2xl:px-[127px]">
@@ -205,17 +250,6 @@
             <div class="container mx-auto px-[20px] pt-[40px] sm:pt-[120px] 2xl:px-[127px] pb-[40px] sm:pb-[80px]">
                 <div class="flex items-center justify-between">
                     <h1 class="font-bold text-[24px] sm:text-[36px]">Новинки</h1>
-                    <a href="./Pages/all_products_new.html">
-                        <div class="text-[12px] sm:text-[16px] flex items-center gap-[7px]">
-                            <p class="text-[#8F8F8F]">Все продукты</p>
-                            <svg width="7" height="13" viewBox="0 0 7 13" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M0.146447 0.146447C0.341709 -0.0488155 0.658291 -0.0488155 0.853553 0.146447L6.85355 6.14645C7.04882 6.34171 7.04882 6.65829 6.85355 6.85355L0.853553 12.8536C0.658291 13.0488 0.341709 13.0488 0.146447 12.8536C-0.0488155 12.6583 -0.0488155 12.3417 0.146447 12.1464L5.79289 6.5L0.146447 0.853553C-0.0488155 0.658291 -0.0488155 0.341709 0.146447 0.146447Z"
-                                    fill="#606060" />
-                            </svg>
-                        </div>
-                    </a>
                 </div>
                 <div
                     class="new-products grid grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-[10px] sm:gap-[40px] pt-[20px] sm:pt-[40px]">
@@ -286,66 +320,12 @@
         </div>
     </footer>
 
-    <div
-        class="flex sm:hidden bg-[white] flex fixed h-[10vw] w-[100vw] bottom-[0px] justify-between items-center flex py-[30px] px-[15px] z-[900]">
-        <a class="flex flex-col items-center" href="../index.html">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M9.5 20.5002V16.0002C9.5 14.6192 10.619 13.5002 12 13.5002V13.5002C13.381 13.5002 14.5 14.6192 14.5 16.0002V20.5002H20V11.9143C20 11.3843 19.789 10.8752 19.414 10.5002L12.707 3.79325C12.316 3.40225 11.683 3.40225 11.293 3.79325L4.586 10.5002C4.211 10.8752 4 11.3843 4 11.9143V20.5002H9.5Z"
-                    stroke="#55556D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-            <p class="text-[12px]">Главная</p>
-        </a>
-        <div class="flex flex-col items-center">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M12.7046 4.25632C13.8299 3.13054 15.3564 2.49805 16.9482 2.49805C18.5399 2.49805 20.0664 3.13051 21.1916 4.25624C22.3174 5.38152 22.95 6.90816 22.95 8.49987C22.95 10.0916 22.3175 11.6181 21.1917 12.7434C21.1917 12.7435 21.1917 12.7434 21.1917 12.7434L12.3517 21.5834C12.1565 21.7787 11.8399 21.7787 11.6446 21.5834L2.80461 12.7434C0.460963 10.3998 0.460963 6.59997 2.80461 4.25632C5.14826 1.91267 8.94807 1.91267 11.2917 4.25632L11.9982 4.96277L12.7046 4.25632C12.7046 4.25629 12.7046 4.25635 12.7046 4.25632ZM16.9482 3.49805C15.6217 3.49805 14.3496 4.02515 13.4118 4.96334L12.3517 6.02343C12.258 6.11719 12.1308 6.16987 11.9982 6.16987C11.8656 6.16987 11.7384 6.11719 11.6446 6.02343L10.5846 4.96343C8.63149 3.0103 5.46484 3.0103 3.51172 4.96343C1.55859 6.91655 1.55859 10.0832 3.51172 12.0363L11.9982 20.5228L20.4846 12.0363C21.4228 11.0986 21.95 9.82636 21.95 8.49987C21.95 7.17338 21.4229 5.90126 20.4847 4.96351C19.5469 4.02532 18.2747 3.49805 16.9482 3.49805Z"
-                    fill="#414141" />
-            </svg>
-            <p class="text-[12px]">Избранное</p>
-        </div>
-        <a href="./category.html" class="flex flex-col items-center">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M11.3325 1.89792C11.3324 1.89801 11.3327 1.89782 11.3325 1.89792L3.33366 5.89736L3.33255 5.89792C2.82288 6.15117 2.50045 6.67105 2.50005 7.24015V16.7636C2.49608 17.3335 2.81541 17.8564 3.32416 18.1132C3.32387 18.113 3.32445 18.1133 3.32416 18.1132L11.3237 22.1129C11.7462 22.3244 12.2438 22.3244 12.6663 22.113L20.6664 18.1129L20.6675 18.1124C21.1773 17.8591 21.4997 17.3391 21.5 16.7699V7.24042C21.4997 6.67121 21.1773 6.15121 20.6675 5.89792L20.6664 5.89736L12.6675 1.89792C12.6674 1.89782 12.6677 1.89801 12.6675 1.89792C12.2474 1.68935 11.7527 1.68934 11.3325 1.89792ZM10.8875 1.00238C11.5883 0.654153 12.4118 0.654153 13.1125 1.00238L13.1137 1.00293L21.1125 5.00238C21.1124 5.0023 21.1127 5.00247 21.1125 5.00238C21.9618 5.42464 22.4995 6.29138 22.5 7.23988V16.7701C22.4995 17.7186 21.9624 18.5853 21.1132 19.0076C21.113 19.0077 21.1134 19.0075 21.1132 19.0076L13.1138 23.0073C13.1138 23.0073 13.1138 23.0073 13.1138 23.0073C12.4097 23.3596 11.5806 23.3597 10.8764 23.0074C10.8764 23.0073 10.8765 23.0074 10.8764 23.0074L2.87644 19.0074L2.87506 19.0067C2.02685 18.5793 1.49413 17.7082 1.50005 16.7585V7.24015C1.50055 6.29169 2.03772 5.42496 2.88695 5.00268C2.88675 5.00278 2.88715 5.00258 2.88695 5.00268L10.8864 1.00294L10.8875 1.00238Z"
-                    fill="#414141" />
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M1.87321 5.93666C1.9967 5.68967 2.29704 5.58956 2.54403 5.71305L12.0004 10.4412L21.4568 5.71305C21.7038 5.58956 22.0041 5.68967 22.1276 5.93666C22.2511 6.18365 22.151 6.48398 21.904 6.60748L12.224 11.4475C12.0833 11.5179 11.9176 11.5179 11.7768 11.4475L2.09682 6.60748C1.84983 6.48398 1.74971 6.18365 1.87321 5.93666Z"
-                    fill="#414141" />
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M12 10.5C12.2761 10.5 12.5 10.7239 12.5 11V22.76C12.5 23.0361 12.2761 23.26 12 23.26C11.7239 23.26 11.5 23.0361 11.5 22.76V11C11.5 10.7239 11.7239 10.5 12 10.5Z"
-                    fill="#414141" />
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M6.5529 3.2765C6.67639 3.02951 6.97673 2.9294 7.22372 3.0529L17.2237 8.0529C17.4707 8.17639 17.5708 8.47673 17.4473 8.72372C17.3238 8.97071 17.0235 9.07082 16.7765 8.94732L6.7765 3.94732C6.52951 3.82383 6.4294 3.52349 6.5529 3.2765Z"
-                    fill="#414141" />
-            </svg>
 
-            <p class="text-[12px]">Заказы</p>
-        </a>
-        <a href="./cart.html" class="flex items-center flex-col">
-            <svg width="24" height="28" viewBox="0 0 24 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M5.5 25C5.5 23.6193 6.61929 22.5 8 22.5C9.38071 22.5 10.5 23.6193 10.5 25C10.5 26.3807 9.38071 27.5 8 27.5C6.61929 27.5 5.5 26.3807 5.5 25ZM8 23.5C7.17157 23.5 6.5 24.1716 6.5 25C6.5 25.8284 7.17157 26.5 8 26.5C8.82843 26.5 9.5 25.8284 9.5 25C9.5 24.1716 8.82843 23.5 8 23.5Z"
-                    fill="#414141" />
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M17.5 25C17.5 23.6193 18.6193 22.5 20 22.5C21.3807 22.5 22.5 23.6193 22.5 25C22.5 26.3807 21.3807 27.5 20 27.5C18.6193 27.5 17.5 26.3807 17.5 25ZM20 23.5C19.1716 23.5 18.5 24.1716 18.5 25C18.5 25.8284 19.1716 26.5 20 26.5C20.8284 26.5 21.5 25.8284 21.5 25C21.5 24.1716 20.8284 23.5 20 23.5Z"
-                    fill="#414141" />
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M1 4.5C0.723858 4.5 0.5 4.72386 0.5 5C0.5 5.27614 0.723858 5.5 1 5.5H4.58051C5.33783 9.79147 6.10333 14.0643 6.74931 18.3709C6.93288 19.5947 7.98416 20.5 9.22165 20.5H19.3597C20.5514 20.5 21.5774 19.6588 21.8111 18.4903L23.2503 11.2942C23.436 10.366 22.726 9.5 21.7795 9.5H7.16046C6.8575 9.5 6.57797 9.58901 6.34436 9.74093L5.49239 4.91311C5.45023 4.67418 5.24262 4.5 5 4.5H1ZM6.666 11.0742C6.62065 10.7719 6.85478 10.5 7.16046 10.5H21.7795C22.095 10.5 22.3316 10.7887 22.2698 11.0981L20.8305 18.2942C20.6903 18.9953 20.0747 19.5 19.3597 19.5H9.22165C8.47916 19.5 7.84839 18.9568 7.73825 18.2225L6.666 11.0742Z"
-                    fill="#414141" />
-                <rect x="11.8604" width="11.28" height="11" rx="4" fill="#FF6633" />
-                <path
-                    d="M18.3804 9C18.3137 9 18.257 8.98 18.2104 8.94C18.1704 8.89333 18.1504 8.83667 18.1504 8.77V3.17L16.4904 4.45C16.4437 4.49 16.3937 4.51 16.3404 4.51C16.2804 4.51 16.2237 4.47667 16.1704 4.41L15.9104 4.08C15.877 4.03333 15.8604 3.98667 15.8604 3.94C15.8604 3.86 15.8937 3.79667 15.9604 3.75L18.1404 2.07C18.2137 2.02333 18.3004 2 18.4004 2H18.9104C18.977 2 19.0304 2.02333 19.0704 2.07C19.117 2.11 19.1404 2.16333 19.1404 2.23V8.77C19.1404 8.83667 19.117 8.89333 19.0704 8.94C19.0304 8.98 18.977 9 18.9104 9H18.3804Z"
-                    fill="white" />
-            </svg>
-            <p class="text-[12px]">Корзина</p>
-        </a>
-        <div>
-            <img src="../assets/header/avatar (7).png" alt="avatar">
-        </div>
-    </div>
+       </div>
+
 
     <script src="../products-data/products-data.js"></script>
+    <script src="../js/all.js"></script>
     <script src="../js/main.js"></script>
 </body>
 
