--- a/Pages/Vacancies.html
+++ b/Pages/Vacancies.html
@@ -58,11 +58,7 @@
                 </div>
                 <div class="flex sm:hidden gap-[7px] items-center">
                     <a href="./search.html">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-                            fill="#414141">
-                            <path
-                                d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z" />
-                        </svg>
+                        <img src="./assets/header/search2.svg" alt="search">
                     </a>
                 </div>
                 <div class="hidden md:flex">
@@ -482,7 +478,7 @@
         </div>
     </footer>
 
-     <div
+    <div
         class="flex sm:hidden bg-[white] flex fixed h-[10vw] w-[100vw] bottom-[0px] justify-between items-center flex py-[30px] px-[20px] z-[900]">
         <a class="flex flex-col items-center" href="../index.html">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -549,7 +545,7 @@
                 <img class="w-[28px] h-[28px]" src="../assets/header/avatar (8).png" alt="avatar">
             </a>
     </div>
-    
+
     <script src="../js/main_2.js"></script>
     <script src="../js/loading.js"></script>
     <script src="../js/main.js"></script>
